commit suggestion index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
-  </tr>
+  I assigned myself to review the changes to my pull request
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
